# carats

./: .env.docker  .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Makefile.toml  README.md  Taskfile.yml  compose-development.yaml  compose-production.yaml  fly-release.toml  fly-source.toml  package.json  pnpm-lock.yaml
.github/rust-action/: action.yml
.github/workflows/: release-edge.yml  release-stable.yml
migrations/: 20230606052044_create_users_table.up.sql  20230610124016_create_customers_table.up.sql  20230610124050_create_subscriptions_table.up.sql
src/: cmd.rs  lib.rs  main.rs  server.rs  traits.rs
src/handler/: mod.rs  user.rs
src/handler/auth/: login.rs  mod.rs  register.rs  signup.rs
src/migrations/: m0001_initialize.rs  m0002_create_application_table.rs  m0003_create_users_table.rs  m0004_create_roles_table.rs  m0005_create_users_has_roles.rs  mod.rs
src/routes/: api.rs  mod.rs  root.rs  spa.rs
src/schema/: auth.rs  global.rs  mod.rs  user.rs
src/utils/: helper.rs  mod.rs
websrc/: index.html
websrc/pages/: Home.tsx
