###
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
###

[package]
name = "carats"
version = "0.0.1"
authors = ["Aris Ripandi <aris@duck.com>"]
description = "This is a starter Rust and React project."
repository = "https://github.com/riipandi/carats"
documentation = "https://github.com/riipandi/carats"
categories = ["command-line-utilities", "web-programming"]
keywords = ["carats", "application", "starter"]
license = "MIT OR Apache-2.0"
rust-version = "1.70"
edition = "2021"
publish = false
build = "build.rs"

# This is recomendation from cargo-diet
include = ["src/**/*", "LICENSE-*", "README.md", "build.rs"]

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1.68" }
axum = { version = "0.6", features = ["tracing"] }
build-time = { version = "0.1.3" }
chrono = { version = "^0.4.23", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.3", default-features = false, features = ["derive", "help", "std"] }
dialoguer = { version ="^0.10", default-features = false, features = ["password", "zeroize"] }
dotenvy = { version = "^0.15" }
fastrand = { version = "^1.8" }
# indicatif = { version = "^0.17", features = ["tokio"] }
mime_guess = "2.0.4"
# jsonwebtoken = {version = "^8", default-features = false }
# password-auth = { version = "0.1.1", features = ["pbkdf2"] }
rust-embed = { version = "6.7", features = ["include-exclude", "axum-ex"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "^0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline", "macros", "migrate"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["tokio"] }
tower-http = { version = "0.4.0", features = ["cors", "timeout", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# ureq = { version = "2.6", features = ["json", "charset"] }
uuid = { version = "^1.3", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]

[build-dependencies]
rust-embed = { version = "6.7", features = ["include-exclude", "axum-ex"] }

# Reduce the Rust binary size and reduces the size of the images further.
# https://kerkour.com/optimize-rust-binary-size
# https://www.youtube.com/watch?v=b2qe3L4BX-Y
[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
debug = false
strip = true
opt-level = 3
lto = true

[profile.dev]
strip = "debuginfo"
split-debuginfo = "unpacked"
opt-level = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
